@@ -29,12 +29,12 @@
 #endregion // License
 namespace Publisher
 {
-    public sealed class XcodeCollatedFile :
-        ICollatedFilePolicy
+    public sealed class XcodeCollatedObject :
+        ICollatedObjectPolicy
     {
         void
-        ICollatedFilePolicy.Collate(
-            CollatedFile sender,
+        ICollatedObjectPolicy.Collate(
+            CollatedObject sender,
             Bam.Core.ExecutionContext context,
             Bam.Core.TokenizedString packageRoot)
         {
@@ -51,12 +51,12 @@ namespace Publisher
                     meta.Target.MakeApplicationBundle();
 
                     // this has to be the path that Xcode writes to
-                    sender.GeneratedPaths[CollatedFile.CopiedFileKey].Assign(sender.CreateTokenizedString("$(packagebuilddir)/$(config)/$(0)/@filename($(1))", sender.SubDirectory, sourcePath));
+                    sender.GeneratedPaths[CollatedObject.CopiedObjectKey].Assign(sender.CreateTokenizedString("$(packagebuilddir)/$(config)/$(0)/@filename($(1))", sender.SubDirectory, sourcePath));
                 }
                 else
                 {
                     // this has to be the path that Xcode writes to
-                    sender.GeneratedPaths[CollatedFile.CopiedFileKey].Assign(sender.CreateTokenizedString("$(packagebuilddir)/$(config)/@filename($(0))", sourcePath));
+                    sender.GeneratedPaths[CollatedObject.CopiedObjectKey].Assign(sender.CreateTokenizedString("$(packagebuilddir)/$(config)/@filename($(0))", sourcePath));
                 }
 
                 return;
