@@ -1,3 +1,5 @@
+06-Oct-2015 Fixes #24. Added function to publish whole directories, IncludeDirectory() on the Collation object.
+
 06-Oct-2015 Fixes #23. Fixed the regular expression tokenizing a string for functions, when multiple functions are present.
 
 06-Oct-2015 Bam.Core.TokenizedString.Create will return null if the format string passed in is null. To create an empty tokenized string, use string.Empty, or Bam.Core.Module.MakePlaceholderPath.
